--- a/empleados/src/main/resources/templates/detalleEmpleado.html
+++ b/empleados/src/main/resources/templates/detalleEmpleado.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Empleado</title>
+    <link rel="stylesheet" th:href="@{/css/estilos.css}" id="estilosCss">
 </head>
 <body>
 <h1>Detalle del Empleado</h1>
