--- a/empleados/src/main/resources/templates/consultaProductos.html
+++ b/empleados/src/main/resources/templates/consultaProductos.html
@@ -10,7 +10,7 @@
 
   <style>
     body {
-      font-family: 'Inter', sans-serif;
+      font-family: 'Helvetica Neue', Helvetica, sans-serif;
       background-color: #f4f7f6;
     }
     .container {
@@ -140,8 +140,8 @@
           </div>
         </div>
         <div class="mt-3 text-center">
-          <button type="submit" class="btn btn-primary"><i class="fas fa-search me-2"></i>Buscar</button>
-          <button type="button" class="btn btn-outline-secondary" id="resetFiltersButton"><i class="fas fa-eraser me-2"></i>Limpiar Filtros</button>
+          <button type="submit" class="boton principal "><i class="fas fa-search me-2"></i>Buscar</button>
+          <button type="button" class="boton secundario" id="resetFiltersButton"><i class="fas fa-eraser me-2"></i>Limpiar Filtros</button>
         </div>
       </form>
     </div>
