--- a/empleados/src/main/resources/templates/empleadoRegistro.html
+++ b/empleados/src/main/resources/templates/empleadoRegistro.html
@@ -4,9 +4,9 @@
     <title>Datos Empleado</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{/css/estilos.css}" id="estilosCss">
+    <script th:src="@{/js/script.js}"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script th:src="@{/js/script.js}"></script>
 
 </head>
 <body>
@@ -26,11 +26,13 @@
     <p style="color: red;" th:text="${error}"></p>
 </div>
 
-<h2>Datos Personales </h2>
+<h2>Registro de Empleado </h2>
+
+<div th:replace="~{fragments/navbar :: navbar}"></div>
 
 <div class="contenedor-principal">
     <!--NavBar-->
-    <div th:replace="~{fragments/navbar :: navbar}"></div>
+    <h2>Datos Personales </h2>
 
     <form th:action="@{/empleados/registro-datos}" enctype="multipart/form-data" th:object="${empleadoRegistroDTO}"
           method="post" id="formulario">
@@ -55,8 +57,8 @@
 
         <div style="margin-bottom: 15px">
             <span style="color:red; display: block">&#8226;</span>
-            <label for="fotografia" th:text="#{Datos-personales.fotografia}" class="boton foto" />
-            <input type="file" id="fotografia" style="display: none;" th:field="*{fotografiaDTO}" >
+            <label for="fotografia" th:text="#{Datos-personales.fotografia}" class="boton foto"/>
+            <input type="file" id="fotografia" style="display: none;" th:field="*{fotografiaDTO}">
             <div th:if="${#fields.hasErrors('fotografiaDTO')}" th:errors="*{fotografiaDTO}" class="error"></div>
             <img src="" alt="" id="miniatura"
                  style="max-width:200px; max-height:200px; object-fit:cover;">
@@ -119,8 +121,9 @@
         </div>
         <div th:if="${#fields.hasErrors('comentarios')}" th:errors="*{comentarios}" class="error"></div>
 
+        <hr>
+
         <div class="btn-form">
-            <a class="boton secundario" th:href="@{/usuarios/logout}">Logout</a>
 
             <input class="boton secundario"
                    type="button"
@@ -139,6 +142,12 @@
 
         </div>
 
+        <hr>
+
+        <div class="btn-form">
+            <a class="boton secundario" th:href="@{/usuarios/info}"> < Área Personal</a>
+            <a class="boton secundario" th:href="@{/usuarios/logout}">Logout</a>
+        </div>
     </form>
 </div>
 
