--- a/empleados/src/main/resources/templates/registro.html
+++ b/empleados/src/main/resources/templates/registro.html
@@ -7,7 +7,7 @@
     <style>
         /* Estilos generales */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Helvetica Neue', Helvetica, sans-serif;
             background-color: #ffffff;
             color: #000000;
             margin: 0;
@@ -22,7 +22,7 @@
             background-color: #ffffff;
             border-radius: 5px;
             padding: 40px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
             max-width: 700px;
             text-align: center;
         }
@@ -43,17 +43,17 @@
             margin-bottom: 10px;
         }
 
-        button {
-            background-color: #f8f9fa;
-            color: #000000;
-            border: 1px solid #ccc;
-            padding: 10px;
-            font-size: 14px;
-            border-radius: 3px;
-            cursor: pointer;
-            width: 100%;
-            margin-top: 10px;
-        }
+        /*button {*/
+        /*    background-color: #f8f9fa;*/
+        /*    color: #000000;*/
+        /*    border: 1px solid #ccc;*/
+        /*    padding: 10px;*/
+        /*    font-size: 14px;*/
+        /*    border-radius: 3px;*/
+        /*    cursor: pointer;*/
+        /*    width: 100%;*/
+        /*    margin-top: 10px;*/
+        /*}*/
 
         .error-message {
             color: red;
@@ -102,6 +102,7 @@
         }
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" th:href="@{/css/estilos.css}" id="estilosCss">
 </head>
 
 <body>
@@ -143,9 +144,9 @@
             </button>
             <div th:if="${#fields.hasErrors('confirmarContrasena')}" th:errors="*{confirmarContrasena}" class="error"></div>
         </div>
-        <div>
-            <button type="submit">Registrarse</button>
-            <button><a th:href="@{/usuarios/inicio-sesion}" style="color: black; text-decoration: none">Iniciar Sesión</a></button>
+        <div class="btn-form">
+            <button type="submit" class="boton principal">Registrarse</button>
+            <a th:href="@{/usuarios/inicio-sesion}" class="boton principal">Iniciar Sesión</a>
         </div>
     </form>
 </div>
