--- a/empleados/src/main/resources/templates/areaPersonal.html
+++ b/empleados/src/main/resources/templates/areaPersonal.html
@@ -42,6 +42,15 @@
     <div class="acciones">
         <a class="boton" th:href="@{/empleados/registro-datos}">Ir a Registro de Empleado</a>
     </div>
+    <div class="acciones">
+        <a class="boton" th:href="@{/empleados/gestion-etiquetas}">Ir a Etiquetado de Empleados</a>
+    </div>
+
+    <hr>
+
+    <div class="acciones">
+        <a class="boton" th:href="@{/empleados/historial}">Ir al Historial</a>
+    </div>
 
     <hr>
 
