--- a/administracion/src/main/resources/templates/consultaProductos.html
+++ b/administracion/src/main/resources/templates/consultaProductos.html
@@ -6,7 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" th:href="@{/css/estilos.css}">
+<!--    <link rel="stylesheet" th:href="@{/css/estilos.css}">-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <style>
@@ -127,7 +127,7 @@
 
     <hr class="my-4">
     <div class="text-center">
-        <a th:href="@{/admin/dashboard}" class="btn btn-outline-secondary mt-3"><i class="fas fa-tachometer-alt"></i> Volver al Dashboard</a>
+        <a th:href="@{/administrador/info}" class="btn btn-outline-secondary mt-3"><i class="fas fa-tachometer-alt"></i> Volver al Dashboard</a>
     </div>
 </div>
 
